additional section plus thumbnail

--- a/index.html
+++ b/index.html
@@ -37,29 +37,36 @@
       </div>
     </nav>
     <div class="midsection">
-      <p class="lead center">Omid Niroumandzadeh
-        <div class="row">
+      <p id="name" class="lead center">Omid Niroumandzadeh</p>        <div class="row">
           <div class="col-xs-12 col-sm-3">
             <img id="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALIAAAAJDMwZDlkMzZkLWUyZTYtNGNjZC04ZDVjLTQwZmI5M2MyMmUyZg.jpg" class="img-responsive">
           </div>
           <div class="col-xs-12 col-sm-9 center">
-            <h4>I have experience with the following frameworks:</h4>
+            <h4> I'm a junior web developer with experience in the following frameworks:</h4>
             <ul id="list">
               <li class="fa fa-check-square">&nbsp;Angular.js</li>
-              <li class="fa fa-check-square">&nbsp;Node.js</li>
               <li class="fa fa-check-square">&nbsp;jQuery</li>
               <li class="fa fa-check-square">&nbsp;Bootstrap</li>
             </ul>
-            <h4>and languages:</h4>
+            <h4>And languages:</h4>
             <ul id="list">
               <li class="fa fa-check-square">&nbsp;JavaScript</li>
             </ul>
+            </div>
+          </div>
+        </p>
+      </div>
+    <div class="bottomsection">
+      <p class="lead center">Active Projects
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 center">
+            <h4 id="bottomtitle"> </h4><a href="http://gitboard.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="gitPic" src="/assets/gitTracker.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a>
           </div>
         </div>
       </p>
     </div>
     <nav class="navbar navbar-default navbar-fixed-bottom">
-      <p class="navbar-text">&quot;</p>
+      <!-- <p class="navbar-text">&quot;</p> -->
     </nav>
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
     <script src="/vendor/angular/angular.min.js"></script>
