--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!--[if IE]>
+    	<link rel="stylesheet" type="text/css" href="all-ie-only.css" />
+    <![endif]-->
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -37,7 +40,8 @@
       </div>
     </nav>
     <div class="midsection">
-      <p id="name" class="lead center">Omid Niroumandzadeh</p>        <div class="row">
+      <p id="name" class="lead center">Omid Niroumandzadeh</p>
+       <div class="row">
           <div class="col-xs-12 col-sm-3">
             <img id="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALIAAAAJDMwZDlkMzZkLWUyZTYtNGNjZC04ZDVjLTQwZmI5M2MyMmUyZg.jpg" class="img-responsive">
           </div>
@@ -52,16 +56,15 @@
             <ul id="list">
               <li class="fa fa-check-square">&nbsp;JavaScript</li>
             </ul>
-            </div>
           </div>
-        </p>
-      </div>
+        </div>
+      </p>
+    </div>
     <div class="bottomsection">
       <p class="lead center">Active Projects
         <div class="row">
-          <div class="col-xs-12 col-sm-12 center">
-            <h4 id="bottomtitle"> </h4><a href="http://gitboard.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="gitPic" src="/assets/gitTracker.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a>
-          </div>
+          <div class="col-md-8"><a href="http://gitboard.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="gitPic" src="/assets/gitTracker.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a></div>
+          <div class="col-md-4"><a href="http://picpuzz.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="puzzPic" src="/assets/picpuzz.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a></div>
         </div>
       </p>
     </div>
