turning the thumbnails into rounded squares

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="bottomsection">
       <p class="lead center">Active Projects
         <div class="row">
-          <div class="col-md-8"><a href="http://gitboard.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="gitPic" src="/assets/gitTracker.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a></div>
-          <div class="col-md-4"><a href="http://picpuzz.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="puzzPic" src="/assets/picpuzz.png" style="width:300px;height:250px;border:0;" class="img-responsive img-circle"/></a></div>
+          <div class="col-md-8"><a href="http://gitboard.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="gitPic" src="/assets/gitTracker.png" style="width:300px;height:250px;border:0;" class="img-responsive img-rounded"/></a></div>
+          <div class="col-md-4"><a href="http://picpuzz.oniroumandzadeh.me.s3-website-us-west-2.amazonaws.com/"> <img id="puzzPic" src="/assets/picpuzz.png" style="width:300px;height:250px;border:0;" class="img-responsive img-rounded"/></a></div>
         </div>
       </p>
     </div>
